# binance-order-book

./: .dockerignore  .envrc  .envrc.example  .gitignore  Dockerfile  Makefile  README.md  Tiltfile  compose.yaml  pyproject.toml  services.py  shell.nix  tailwind.config.js
.github/workflow/: actions.yml
.github/workflows/: actions.yml
book/: app.py  config.py  domain.py  events.py  routes.py  services.py  worker.py
book/static/css/: main.css
book/templates/: _base.html  order-book.html
book/tests/: conftest.py  test_routes.py
