[tool.poetry]
name = "binance-order-book"
version = "0.1.0"
description = ""
authors = ["Roman Dolgyi <tosters@gmail.com>"]
readme = "README.md"
packages = [{include = "binance_order_book"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
