[tool.poetry]
name = "binance-order-book"
version = "0.1.0"
description = ""
authors = ["Roman Dolgyi <tosters@gmail.com>"]
readme = "README.md"
packages = [{include = "book"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
aiohttp = "^3.8.5"
fastapi = {extras = ["all"], version = "^0.103.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
pytailwindcss = "^0.2.0"
jinja2-fragments = "^0.3.0"
sse-starlette = "^1.6.5"
motor = "^3.3.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
